<resources>
    <string name="app_name" translatable="false">CalorieSnap</string>

    <string name="error_camera">Camera Setup Error, Quitting</string>
    <string name="request_permission">Request camera permssions</string>

    <string name="txt_kcal">kCal</string>
    <!-- further info screen-->
    <!-- pie chart labels-->
    <string name="lbl_pie_chart">Pie Chart</string>
    <string name="rda_percentage">%RDA</string>
    <string name="remaining">remaining</string>
    <string name="male">male</string>
    <string name="female">female</string>

    <string name="total_kcal">Total kCal Counted</string>

    <!-- Shared prefs -->
    <string name="tag_total_kcal" translatable="false">TOTAL_KCAL</string>

    <!-- Preferences -->
    <string name="prefs_title">Preferences</string>
    <string name="prefs_high_constrast">High Contrast</string>
    <string name="prefs_auto_text_to_speech">Auto Text-To-Speech</string>
    <string name="prefs_language">Language</string>
    <string name="lang_eng">English</string>
    <string name="lang_fra">French</string>
    <string name="lang_ger">German</string>

    <!-- Text to speech gallery screen -->
    <string name="tts_gallery_1">This meal has </string>
    <!--#2 string kcal count-->
    <string name="tts_gallery_3"> calories.</string>

    <!--Text to speech FI screen -->
    <string name="tts_fi_1">This meal has </string>
    <!--#2 int percentage female-->
    <string name="tts_fi_3"> percent of the female, and </string>
    <!--#4 int percentage male-->
    <string name="tts_fi_5">" percent of the male caloric R D A"</string>
    <string name="tts_fi_6">So far, you have counted </string>
    <!-- #7 int total kcal -->
    <string name="tts_fi_8"> calories with this app.</string>

    <!-- Help -->
    <string name="help_title">" Help"</string>
        <!--gallery help-->
        <string name="help_gallery_settings">Navigate to settings</string>
        <string name="help_gallery_invert">Inverts the color of text items</string>
        <string name="help_gallery_help">Navigate to the help screen</string>
        <string name="help_gallery_tts">Reads aloud the kcal count</string>
        <string name="help_gallery_swipe_u">Swiping up returns to the camera screen</string>
        <string name="help_gallery_swipe_d">Swiping down shows more information about your meal</string>
        <string name="help_gallery_swipe_lr">Swiping left or right cycles through your meals</string>
        <!--camera help-->
        <string name="help_camera_capture">Take a photo of a meal and calculate its kcal count</string>
        <string name="help_camera_swipe_d">Swiping down navigates to the gallery screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>